app2/gap-vs-dr-my-pythonapp.yaml
# Source: istio/templates/destination-rule.yaml                                                                                                                  
apiVersion: networking.istio.io/v1beta1                                                                                                                          
kind: DestinationRule                                                                                                                                            
metadata:                                                                                                                                                        
  name: dstr-my-python-app                                                                                                                                            
  namespace: nms-ces-sandbox-06-dev                                                                                                                                 
                                                                                                                                                                 
  annotations:                                                                                                                                                   
    tsb.tetrate.io/organization: gap                                                                                                                             
    tsb.tetrate.io/tenant: NonProduction                                                                                                                         
    tsb.tetrate.io/workspace: ces-sandbox-workspace                                                                                                                 
    tsb.tetrate.io/trafficGroup: ces-sandbox-traffic-dev                                                                                                            
                                                                                                                                                                 
spec:                                                                                                                                                            
  host: my-python-app-svc                                                                                                                                            
  subsets:                                                                                                                                                       
  - name: my-python-app-route                                                                     
    labels:        # labels will be injected with canary rollouts-pod-template-hash value                                                                        
      app: my-python-app                                                                                                                                              
      
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ivs-my-python-app                                                                                                                                             
  namespace: nms-ces-sandbox-06-dev                                                                                                                  
                                                                                                                                                                 
  annotations:                                                                                                                                                   
    tsb.tetrate.io/organization: gap                                                                                                                             
    tsb.tetrate.io/tenant: NonProduction                                                                                                                         
    tsb.tetrate.io/workspace: ces-sandbox-workspace                                                                                                                 
    tsb.tetrate.io/trafficGroup: ces-sandbox-traffic-dev
spec:
  gateways:
  - gwy-nms-ces-sandbox-06-dev
  hosts:
  - ces-sandbox.aks.dev.azeus.gaptech.com
  http:
  - name: "my-python-app-route"
    match:
    - uri:
        prefix: /caas
    - uri:
        exact: /caas
    rewrite:
      uri: "/"
    route:
    - destination:
        host: my-python-app-svc
        port:
          number: 443
