app2/leonapp-gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pereira-gateway
spec:
  selector:
    app: istio-ingressgateway # label on the ingress pod
    istio: ingressgateway  # label on the ingress pod
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---



apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
  name: dr-leonpython-app2
spec:
  host: app2-svc.default.svc.cluster.local
  subsets:
  - labels:
      app: leonpython-app2
    name: leonpython-app2-ss
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: leonpython-app2
  name: app2-vs
spec:
  hosts:
  - pereira.vasaiforyou.com
  gateways:
  - pereira-gateway
  http:
  - match:
     - uri:
        prefix: "/app2"
    rewrite:
      uri: "/"    
    route:
    - destination:
        host: app2-svc.default.svc.cluster.local
